wazuh/gke/deployments/elasticsearch.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  ports:
  - port: 9200
    name: elasticsearch
    targetPort: 9200
    protocol: TCP
  selector:
    app: elasticsearch
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
        app: elasticsearch
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4
        volumeMounts:
        - name: data-pers
          mountPath: /usr/share/elasticsearch/data
        ports:
        - name: elasticsearch
          containerPort: 9200
        resources:
           limits:
              cpu: 200m
              memory: 2200Mi
           requests:
              cpu: 50m
              memory: 200Mi
  volumeClaimTemplates:
  - metadata:
      name: data-pers
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 32Gi
