wazuh/gke/deployments/wazuh-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
  - port: 443
    name: https
    targetPort: 443
    protocol: TCP
  selector:
    app: wazuh-nginx
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wazuh-nginx
  labels:
        app: wazuh-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wazuh-nginx
    spec:
      containers:
      - name: wazuh-nginx
        image: wazuh/wazuh-nginx:3.8.0_6.5.4
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
