wazuh/gke/deployments/wazuh-server.yml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-manager
spec:
  ports:
  - port: 55000
    name: wazuh-api
    targetPort: 55000
    protocol: TCP
  - port: 1515
    name: wazuh-tcp
    targetPort: 1515
    protocol: TCP
  - port: 1516
    name:  wazuh-tcp2
    targetPort: 1516
    protocol: TCP
  - port: 1514
    targetPort: 1514
    name: wazuh-udp
    protocol: UDP
  selector:
    app: wazuh-server
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wazuh-server
  labels:
        app: wazuh-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wazuh-server
    spec:
      containers:
      - name: wazuh-server
        image: wazuh/wazuh:3.8.0_6.5.4
        ports:
        - name: wazuh-api
          containerPort: 55000
        - name: wazuh-tcp
          containerPort: 1515
        - name: wazuh-tcp2
          containerPort: 1516
        - name: wazuh-udp
          containerPort: 1514
