wazuh/gke/deployments/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-kibana
  annotations:
    kubernetes.io/ingress.class: nginx

    # Use a static ip
    # enable session persistence for one or multiple services

spec:
  rules:
  - host: wazuh.csiete.org
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
